# stitcher

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: params.yaml
data/: perlin_map.pcd
launch/: goal_click.launch  goal_click_sim.rviz
src/: primitiveParams.h
src/collision_checker/: CollisionChecker.cc  CollisionChecker.h  CollisionChecker.tpp
src/feasibility_checker/: FeasibilityChecker.cpp  FeasibilityChecker.h  FeasibilityChecker.tpp
src/geometric_planner/: GeometricPlanner.cpp  GeometricPlanner.h
src/geometric_planner/astar/: Astar.cpp  Astar.h
src/geometric_planner/jps/: Jps3d.cpp  Jps3d.h
src/node/: ROS_Goal_Click_Planning.cc  ROS_Goal_Click_Planning.h  ROS_Goal_Click_Planning_Main.cc
src/planners/heuristic_generator/: HeuristicDP.cpp  HeuristicDP.h
src/planners/stitcher/: LqmtSTITCHER.cpp  LqmtSTITCHER.h  STITCHER.h  STITCHER.tpp
src/primitives/lqmt/: LQMTPrimitive.cpp  LQMTPrimitive.h
src/primitives/min_time/: MinTimePrimitive.cpp  MinTimePrimitive.h
src/reference_path_utils/: ReferencePath.cpp  ReferencePath.h
