<?xml version="1.0"?>
<package format="2">
  <name>stitcher_planner</name>
  <version>1.0.0</version>
  <description>STITCHER: Real-Time Trajectory Planning with Motion Primitive Search</description>

  <maintainer email="hjlevy@ucla.edu">Helene J. Levy</maintainer>
  <maintainer email="btlopez@ucla.edu">Brett T. Lopez</maintainer>

  <author>Helene J. Levy</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
